@@ -7,6 +7,8 @@ import com.collegeManagementSystem.collegeManagementSystem.entities.ProfessorEnt
 import com.collegeManagementSystem.collegeManagementSystem.entities.SubjectEntity;
 import com.collegeManagementSystem.collegeManagementSystem.repositories.ProfessorRepository;
 import com.collegeManagementSystem.collegeManagementSystem.repositories.SubjectRepository;
+import com.collegeManagementSystem.collegeManagementSystem.services.SubjectService;
+import jakarta.transaction.Transactional;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
@@ -16,21 +18,23 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
-public class SubjectServiceImpl implements SubjectService{
+public class SubjectServiceImpl implements SubjectService {
 
-    private SubjectRepository subjectRepository;
+    private final SubjectRepository subjectRepository;
     private final ProfessorRepository professorRepository;
     private final ModelMapper modelMapper;
 
-    public SubjectServiceImpl(SubjectRepository subjectRepository, ProfessorRepository professorRepository, ModelMapper modelMapper) {
+    public SubjectServiceImpl(SubjectRepository subjectRepository,
+                              ProfessorRepository professorRepository,
+                              ModelMapper modelMapper) {
         this.subjectRepository = subjectRepository;
         this.professorRepository = professorRepository;
         this.modelMapper = modelMapper;
     }
 
-    public void subjectExistsById(Long id) {
+    private void subjectExistsById(Long id) {
         if (!subjectRepository.existsById(id)) {
-            throw new NoSuchElementException("Subject not found by the id: " + id);
+            throw new NoSuchElementException("Subject not found by id: " + id);
         }
     }
 
@@ -40,28 +44,28 @@ public class SubjectServiceImpl implements SubjectService{
         return subjects.stream()
                 .map(subject -> {
                     SubjectDTO dto = modelMapper.map(subject, SubjectDTO.class);
-                    dto.setStudentCount(subject.getStudents().size());
+                    dto.setStudentCount(subject.getStudents() != null ? subject.getStudents().size() : 0);
                     return dto;
                 })
                 .collect(Collectors.toList());
     }
 
-
     @Override
     public Optional<SubjectDTO> getSubjectById(Long id) {
-        Optional<SubjectEntity> subjectEntityOpt = subjectRepository.findById(id);
-        return subjectEntityOpt.map(subject -> {
-            SubjectDTO dto = modelMapper.map(subject, SubjectDTO.class);
-            dto.setStudentCount(subject.getStudents().size());
-            return dto;
-        });
+        return subjectRepository.findById(id)
+                .map(subject -> {
+                    SubjectDTO dto = modelMapper.map(subject, SubjectDTO.class);
+                    dto.setStudentCount(subject.getStudents() != null ? subject.getStudents().size() : 0);
+                    return dto;
+                });
     }
 
+
     @Override
+    @Transactional
     public SubjectDTO createSubject(SubjectDTO subjectDTO) {
         SubjectEntity subjectEntity = modelMapper.map(subjectDTO, SubjectEntity.class);
 
-        // Fetch professor by id (assuming subjectDTO.professor has an id)
         if (subjectDTO.getProfessor() != null && subjectDTO.getProfessor().getId() != null) {
             ProfessorEntity professorEntity = professorRepository.findById(subjectDTO.getProfessor().getId())
                     .orElseThrow(() -> new NoSuchElementException("Professor not found by id: " + subjectDTO.getProfessor().getId()));
@@ -72,17 +76,14 @@ public class SubjectServiceImpl implements SubjectService{
 
         SubjectEntity saved = subjectRepository.save(subjectEntity);
 
-        // Map back to DTO
         SubjectDTO resultDTO = modelMapper.map(saved, SubjectDTO.class);
-
-        // Set the studentCount explicitly because it's not a direct field on SubjectEntity
-        resultDTO.setStudentCount(saved.getStudents() == null? 0 : saved.getStudents().size());
+        resultDTO.setStudentCount(saved.getStudents() != null ? saved.getStudents().size() : 0);
 
         return resultDTO;
     }
 
-
     @Override
+    @Transactional
     public SubjectDTO updateSubject(Long id, SubjectDTO subjectDTO) {
         subjectExistsById(id);
 
@@ -100,22 +101,20 @@ public class SubjectServiceImpl implements SubjectService{
             SubjectEntity updated = subjectRepository.save(subject);
 
             SubjectDTO resultDTO = modelMapper.map(updated, SubjectDTO.class);
-            resultDTO.setStudentCount(updated.getStudents() == null ? 0 : updated.getStudents().size());
+            resultDTO.setStudentCount(updated.getStudents() != null ? updated.getStudents().size() : 0);
 
             return resultDTO;
         }).orElseThrow(() -> new NoSuchElementException("Subject not found with id: " + id));
     }
-
 
     @Override
     public List<StudentDTO> getStudentBySubjectId(Long subjectId) {
         subjectExistsById(subjectId);
 
         return subjectRepository.findById(subjectId)
-                .map(subject -> subject.getStudents()
-                        .stream()
+                .map(subject -> subject.getStudents().stream()
                         .map(student -> new StudentDTO(student.getId(), student.getName()))
-                        .toList())
+                        .collect(Collectors.toList()))
                 .orElse(List.of());
     }
 
@@ -124,15 +123,15 @@ public class SubjectServiceImpl implements SubjectService{
         subjectExistsById(subjectId);
 
         return subjectRepository.findById(subjectId)
-                .map(subject -> List.of(subject.getProfessor()))
-                .orElse(List.of())
-                .stream()
-                .map(professor -> modelMapper.map(professor, ProfessorDTO.class))
-                .collect(Collectors.toList());
+                .map(subject -> {
+                    if (subject.getProfessor() == null) return List.<ProfessorDTO>of();
+                    return List.of(modelMapper.map(subject.getProfessor(), ProfessorDTO.class));
+                })
+                .orElse(List.of());
     }
 
-
     @Override
+    @Transactional
     public boolean deleteSubject(Long id) {
         subjectExistsById(id);
         subjectRepository.deleteById(id);
